// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render standard element: active element 1`] = `
<li
  onFocus={[Function]}
  onMouseOver={[Function]}
>
  <Checkbox
    checked={true}
    className="active"
    id="mytag"
    onCheck={[MockFunction]}
    thirdState={false}
  >
    <span
      className="little-spacer-left"
    >
      mytag
    </span>
  </Checkbox>
</li>
`;

exports[`should render standard element: custom element 1`] = `
<li
  onFocus={[Function]}
  onMouseOver={[Function]}
>
  <Checkbox
    checked={false}
    className=""
    id="mytag"
    onCheck={[MockFunction]}
    thirdState={false}
  >
    <span
      aria-label="create_new_element: mytag"
      className="little-spacer-left"
    >
      <span
        aria-hidden={true}
        className="little-spacer-right"
      >
        +
      </span>
      mytag
    </span>
  </Checkbox>
</li>
`;

exports[`should render standard element: default element 1`] = `
<li
  onFocus={[Function]}
  onMouseOver={[Function]}
>
  <Checkbox
    checked={false}
    className=""
    id="mytag"
    onCheck={[MockFunction]}
    thirdState={false}
  >
    <span
      className="little-spacer-left"
    >
      mytag
    </span>
  </Checkbox>
</li>
`;

exports[`should render standard element: disabled element 1`] = `
<li
  onFocus={[Function]}
  onMouseOver={[Function]}
>
  <Checkbox
    checked={false}
    className="disabled"
    disabled={true}
    id="mytag"
    onCheck={[MockFunction]}
    thirdState={false}
  >
    <span
      className="little-spacer-left"
    >
      mytag
    </span>
  </Checkbox>
</li>
`;

exports[`should render standard element: selected element 1`] = `
<li
  onFocus={[Function]}
  onMouseOver={[Function]}
>
  <Checkbox
    checked={true}
    className=""
    id="mytag"
    onCheck={[MockFunction]}
    thirdState={false}
  >
    <span
      className="little-spacer-left"
    >
      mytag
    </span>
  </Checkbox>
</li>
`;
